Stopped overlapping of button with last scontrino

--- a/src/App.css
+++ b/src/App.css
@@ -285,4 +285,7 @@ div[role='dialog'] {
 		left: 45vw;
 		top: 93vh;
 	}
+	.rightApp {
+		padding-bottom: 2em;
+	}
 }
